--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -10,4 +10,6 @@
 @font-face {
   font-family:'GiganticFS'; 
   src: url(./assets/fonts/GiganticFs.ttf);
+  font-family:'MintSansRegular'; 
+  src: url(./assets/fonts/MintSansRegular.otf);
 }
