--- a/frontend_react/src/components/Isolation/Isolation.scss
+++ b/frontend_react/src/components/Isolation/Isolation.scss
@@ -1,9 +1,10 @@
 .container3 {
-  position: absolute;
   width: 100%;
-  height: 500px;
-  justify-content: center;
-  background-color: #010101;
+
+  object-fit: cover;
+  position: relative;
+  background: no-repeat;
+  background-size: cover; 
 }
 
 .slider {
@@ -12,19 +13,7 @@
   margin: 0px;
 }
 
-.aws-btn {
-  background-color: #010101;
-  --slider-height-percentage: 65%;
-  --slider-transition-duration: 246ms;
-  --organic-arrow-thickness: 4px;
-  --organic-arrow-border-radius: 0px;
-  --organic-arrow-height: 40px;
-  --organic-arrow-color: #26456f;
-  --control-button-width: 10%;
-  --control-button-height: 25%;
-  --control-button-background: transparent;
-  --control-bullet-color: #2d5182;
-  --control-bullet-active-color: #26456f;
-  --loader-bar-color: #851515;
-  --loader-bar-height: 6px;
+  .vid {
+    width: 100%    !important;
+    height: auto   !important;
   }
