--- a/frontend_react/src/container/Links/Links.scss
+++ b/frontend_react/src/container/Links/Links.scss
@@ -1,21 +1,28 @@
-.container {
+.container5 {
   white-space: nowrap;
   display: flex;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%);
+  z-index: 10;
+  position: relative;
+  bottom: 0%;
+  margin-top: 390vh;
+  justify-content: center;
 }
-.rectangle {
+
+.rectangle3 {
   z-index: 5;
   height: 250px;
-  max-width: 100%;
+  width: 100%;
   background-color: #F1F1F1;
   margin-left: 0px;
-  transform: rotate(-4deg);
+  transform: rotate(4deg);
   border-top: 10px solid #010101;
   border-bottom: 10px solid #010101;
   margin-top: -150px;
   text-align: center;
   box-sizing: border-box;
+  position: absolute;
 
   h2{
     font-size: 12rem;
@@ -28,6 +35,20 @@
   }
 }
 
+.icon-container {
+  position: absolute;
+  z-index: 10;
+  height: 400px;
+  margin-left: 50px;
+  display: flex;
+  margin-top: 5vh;
+
+   a:hover{
+     transform: scale(1.1);
+     transition: all ease 0.3s;
+   }
+}
+
 @media screen and (max-width: 600px) { 
   .container{
     display: flex;
@@ -38,10 +59,6 @@
   .rectangle {
     margin-top: 0px;
     height: 125px;
-
-      h2 {
-        font-size: 6rem;
-      }
   }
   
 }
