--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -1,5 +1,5 @@
 .rectangle2 {
-  width: 100vw;
+  max-width: 100%;
   background-color: #010101;
   height: 100vh;
   z-index: -10;
@@ -9,9 +9,16 @@
 }
 
 .container2 {
+  display: flex;
+  width: 100%;
+  z-index: -1;
+  position: relative;
+}
+
+.section-container{
+  z-index: 1;
   width: 100%;
   display: flex;
-  justify-items: center;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+  position: absolute;
 }
