--- a/frontend_react/src/container/Links/Links.scss
+++ b/frontend_react/src/container/Links/Links.scss
@@ -42,6 +42,9 @@
   margin-left: 50px;
   display: flex;
   margin-top: 5vh;
+   a {
+    transition: all ease 0.4s;
+   }
 
    a:hover{
      transform: scale(1.1);
